# MPCHonestMajorityNoTriples

./: .gitignore  BAParty.cpp  BAParty.h  CMakeLists.txt  ECC.h  LinearParty.cpp  LinearParty.h  LinearParty.hpp  ProtocolParty.h  README.md  SmallTestCircuit  TemplateField.h  Timer.cpp  Timer.h  ZpKaratsubaElement.h  main.cpp  run_protocol.sh
